@@ -11,11 +11,11 @@ public class OptionValue {
 	private static final Map<String, Object> DEFAULT_VALUE_MAP = new HashMap<String, Object>();
 	static {
 		DEFAULT_VALUE_MAP.put(OptionName.EVAL_SCRIPT_NAME, "EVAL_SCRIPT");
-		DEFAULT_VALUE_MAP.put(OptionName.EVAL_NUMBER_AS_FLOAT, new Boolean(false));
+		DEFAULT_VALUE_MAP.put(OptionName.EVAL_NUMBER_AS_FLOAT, Boolean.valueOf(false));
 		DEFAULT_VALUE_MAP.put(OptionName.LIBRARY_SCRIPT_CODE, new String[0]);
 		DEFAULT_VALUE_MAP.put(OptionName.LIBRARY_SCRIPT_NAME, new String[0]);
 		DEFAULT_VALUE_MAP.put(OptionName.LOCALE, Locale.getDefault());
-		DEFAULT_VALUE_MAP.put(OptionName.ACCELERATOR, new Boolean(false));
+		DEFAULT_VALUE_MAP.put(OptionName.ACCELERATOR, Boolean.valueOf(false));
 	}
 
 	@SuppressWarnings("unchecked")
